# workshop

./: .env  Cargo.toml
migrations/2020-07-17-161035_students/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/students/: mod.rs  model.rs  routes.rs
