[package]
name = "rust_actix_rust_api"
version = "0.1.0"
authors = ["rajabraza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

#state is used for Storage struct
state = { version = "0.4", features = ["const_fn"] }

serde = "1.0"