[package]
name = "rust_actix_rust_api"
version = "0.1.0"
authors = ["rajabraza"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

serde = "1.0"
# For diesel
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4"
dotenv = "0.11"